# Whispr

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tsconfig.scripts.json
.cursor/rules/: descriptive-names.mdc  use-base-ui.mdc
.cursor/skills/bump-version/: SKILL.md
.github/: RELEASE_BODY.md
.github/workflows/: release.yml
scripts/: fetch-sidecars.sh  generate-i18n-locales.ts  i18n-locale-data.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binaries.rs  downloader.rs  jobs_db.rs  lib.rs  media.rs  paths.rs  translate.rs  updates.rs
src-tauri/src/export/: docx_out.rs  mod.rs  pdf_out.rs  srt_out.rs  txt_out.rs
src-tauri/src/pipeline/: download.rs  extract_audio.rs  mod.rs  persist_audio.rs  progress.rs  transcribe.rs
src-tauri/src/record/: capture.rs  chunk_transcribe.rs  mod.rs  session.rs
src/app/dashboard/: Dashboard.tsx  EmptyState.tsx  FileList.tsx  FileRow.tsx  ProgressBar.tsx  TranscriptPlayer.tsx  db.ts  store.ts  (+4 more)
src/components/: AppFileDropLayer.tsx  AppShell.tsx  AppToasts.css  AppToasts.tsx  EditableFileName.tsx  Header.tsx  Sidebar.tsx  ThemeToggle.tsx  Tooltip.tsx  UpdateAvailablePopover.tsx
src/hooks/: useAppUpdate.ts  useBinaryHealth.ts  useIsMacTauri.ts  useTheme.ts  useTranscriptPlayback.ts
src/lib/: appUpdate.ts  binaryHealthCache.ts  db.ts  exportFilename.ts  i18n.ts  i18nLabels.ts  srt.ts  theme.ts  toastManager.ts  transcriptActions.ts  windowDrag.ts
src/types/: index.ts  types.ts
(+47 files in other folders)
