[package]
name = "whispr"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "whispr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "blocking", "json"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
hound = "3.5"
chrono = "0.4"
printpdf = "0.3"
docx-rs = "0.4"
urlencoding = "2"
